--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <body>
     <div id="app-container">
     </div>
-    <script src="./dest/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
